# django-blog

./: pyproject.toml
django_project/: .coverage  .env  db.sqlite3
django_project/blog/: models.py  tests.py  urls.py  views.py
django_project/blog/migrations/: 0001_initial.py  0002_alter_post_author.py
django_project/blog/templates/blog/: base.html  home.html  post_detail.html  post_form.html  user_posts.html
django_project/django_project/: settings.py  urls.py
django_project/staticfiles/: staticfiles.json
django_project/staticfiles/blog/: main.css
django_project/users/: forms.py  signals.py  tests.py  views.py
django_project/users/migrations/: 0001_initial.py  0002_alter_profile_image.py
django_project/users/templates/users/: login.html  register.html
