[project]
name = "my-django-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.4",
    "crispy-bootstrap5>=2025.6",
    "django==4.2.26",
    "django-crispy-forms>=2.5",
    "djlint>=1.36.4",
    "pillow>=12.1.1",
    "gunicorn>=21.2.0",
    "whitenoise>=6.7.0",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "python-dotenv>=1.2.2",
]

